# kicker

./: AGENTS.md  README.md  SESSION.md  pyproject.toml
docs/: architecture.md
src/kicker/: __init__.py  cli.py  config_store.py  daemon_control.py  daemon_runtime.py  kickerd.py  logging_backend.py  models.py  paths.py  rule_logic.py  runtime_state.py
tests/: test_cli_rules.py  test_daemon_option_parity.py  test_daemon_runtime.py  test_daemon_stop.py  test_kickerd_cli.py  test_rule_logic.py
